--- a/dev/import/styles/styles-outline.scss
+++ b/dev/import/styles/styles-outline.scss
@@ -1,8 +1,4 @@
 
-main {
-    overflow-x: hidden;
-}
-
 .section-footer {
     padding: 2.5rem 1rem;
 
